syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Vector.proto";


message EvtAvatarLockChairReq {
	uint64 chair_id = 9;
	int32 direction = 1;
	Vector position = 4;
}